fix: Hide overflow-x

--- a/static/editor.css
+++ b/static/editor.css
@@ -6,6 +6,7 @@ body {
     -khtml-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+    overflow-x: hidden;
 }
 
 a {
